# claude-memory-system

./: .env.example  .gitignore  CLAUDE.md  README.md  agent_security.py  app.py  chat_logging.py  chatlog_backfill.py  chatlog_state_store.py  chatlog_targets.py  conversation_session.py  feishu_client.py  feishu_ws_bridge.py  memory_context.py  memory_index.py  memory_stage1.py  prompt_builder.py  pyproject.toml  requirements.txt  runtime_config.py  stale_client_cleanup.py  开发总结.md  开发问题与解决记录.md
docs/: AGENT_IMPLEMENTATION_PROMPT.md  README.md  chatlog-integration-issues-and-solutions.md  claude agent sdk使用文档.md  开发问题与解决记录.md
memory/: MEMORY_SCHEMA.md  _index.json
static/: index.html
tests/: test_agent_security.py  test_auth_probe.py  test_bash_policy.py  test_chat_logging.py  test_chatlog_backfill.py  test_chatlog_state_store.py  test_chatlog_targets.py  test_chatlog_targets_api.py  test_chatlog_webhook_api.py  test_conversation_session.py  test_feishu_integration_api.py  test_feishu_memory_group_commands.py  test_feishu_reply_suggest_commands.py  test_feishu_session_commands.py  test_feishu_webhook_removed.py  test_feishu_ws_bridge_chunking.py  test_feishu_ws_bridge_serialization.py  test_feishu_ws_bridge_timeout.py  test_get_client_sdk_options.py  test_healthz_api.py  test_memory_capture_api.py  test_memory_context.py  test_memory_context_async.py  test_memory_index.py  test_memory_reindex_api.py  test_memory_stage1.py  test_memory_write_policy.py  test_prompt_builder.py  test_reply_building.py  test_run_agent_error_details.py  test_run_agent_session_id.py  (+5 more)
(+107 files in other folders)
